[project]
name = "ib-trading-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Goh Zi He", email = "zihe.goh@gmail.com" }
]
dependencies = [
    "ib-async>=1.0.1",
    "lightweight-charts>=1.0.22",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"ib-trading-py" = "ib_trading_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ib_trading_py"]
